css/default.css
html { position: relative; min-height: 100%; }
body { margin-bottom: 60px; padding-top: 70px; font-family:"Segoe UI","Segoe","Helvetica Neue",Helvetica,Arial,sans-serif; }
.footer { position: absolute; bottom: 0; width: 100%; height: 48px; background-color: #f5f5f5; padding-top:6px; }
.navbar-brand>img{ display:inline;margin:0 10px; } /* add height:100% for bigger images */
main { font-size:1.25em; }
.headshot { float:right; margin:5px; }
.jumbotron>img{ display: block; margin-left: auto; margin-right: auto; }
.jumbotron>h1{ font-family:Helvetica;text-align:center; }
.carousel-indicators { bottom: 0px; margin-bottom: 0px; }
.navbar-default .navbar-nav > .active { color: #3AB34A; background: #fff }
.navbar-default .navbar-nav > .active > a,
.navbar-default .navbar-nav > .active > a:hover,
.navbar-default .navbar-nav > .active > a:focus{
  color: #3AB34A; background: #fff
}
.navbar-default .navbar-nav > li > a:active,
.navbar-default .navbar-nav > li > a:hover, 
.navbar-default .navbar-nav > li > a:focus {
  background-color: #196633;
  color: #BAD745;
}
.hidden {
  display: none;
}

